# healthcare-agent-demo-api

./: .env.local  .env.test  .gitignore  LICENSE  README.md  SETUP.md  docker-compose.yml  pyproject.toml
diagrams/: README.md
src/: run.py
src/app/: app.py
src/app/api/: api.py  api_response_models.py  dependencies.py  ehr_context_items_api.py  ehr_ingestion_tasks_api.py  ehr_query_api.py
src/app/core/: app_settings.py
src/app/domain/ehr_ingestion/: ehr_context_models.py  ehr_contexts_repository.py  ehr_contexts_service.py  ehr_models.py
src/app/domain/ehr_query/: ehr_prompt_utils.py  ehr_query_models.py  ehr_query_service.py
src/app/domain/llm/: llm_client.py
src/app/infrastructure/llm/: openai_llm_client.py
src/tests/: conftest.py
src/tests/api/: test_ehr_ingestion_tasks_api.py
