[project]
name = "ehr-context-engineering-demo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "asyncpg-stubs>=0.31.1",
    "black>=25.12.0",
    "httpx>=0.28.1",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "testcontainers[postgresql]>=4.14.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
plugins = ["pydantic.mypy"]
files = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
